<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_amigo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="juanantonio.redsocialjuan.AddAmigo">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/edtAddamigo"
        android:ems="10"
        android:id="@+id/edtAddamigoname" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtAddamigoname"
        android:inputType="textPersonName"
        android:hint="@string/emailAddamigo"
        android:ems="10"
        android:id="@+id/emailAddamigo" />

    <Button
        android:text="@string/btnaddamigo"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_below="@id/emailAddamigo"
        android:background="@drawable/buton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAddmas" />
</RelativeLayout>
