<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="juanantonio.redsocialjuan.Login">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="20dp"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:id="@+id/titleSocial"
        android:text="@string/titleSocial" />

    <TextView
        android:text="@string/txvUser"
        android:textSize="20dp"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/titleSocial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txvUser" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/txvUser"
        android:layout_alignBaseline="@id/txvUser"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edtName" />

    <TextView
        android:text="@string/txvPass"
        android:textSize="20dp"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/txvUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txvPass" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_toRightOf="@+id/txvPass"
        android:layout_alignBaseline="@id/txvPass"
        android:ems="10"
        android:id="@+id/edtPass" />

    <Button
        android:text="@string/login"
        android:background="@drawable/buton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_below="@id/txvPass"
        android:id="@+id/btnLogin" />


</RelativeLayout>
